--- a/Eshop/Eshop/Eshop.csproj
+++ b/Eshop/Eshop/Eshop.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TEST\" />
+    <Folder Include="Test\" />
     <Folder Include="wwwroot\Images\thumb\" />
   </ItemGroup>
 
