--- a/Eshop/Eshop.csproj
+++ b/Eshop/Eshop.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Images\banners\" />
     <Folder Include="wwwroot\Images\thumb\" />
     <Folder Include="wwwroot\MyImages\" />
   </ItemGroup>
